--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Custom animated Gauge for upcoming project.",
   "main": "webpack.config.js",
   "devDependencies": {
-    "@types/node": "^8.0.53",
+    "@types/node": "^17.0.6",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "typescript": "^2.6.2",
-    "webpack": "^3.8.1"
+    "http-server": "^14.0.0",
+    "typescript": "^4.5.4",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   },
   "scripts": {
     "clean": "yarn run clean-build-steps && rm -rf dist",
@@ -17,14 +19,14 @@
     "webpack": "webpack && cp public/* dist",
     "clean-build-steps": "rm -rf build-tsc build-babel",
     "build": "yarn run clean && yarn run tsc && yarn run babel && yarn run webpack && yarn run clean-build-steps",
-    "build-partial" : "yarn run babel && yarn run webpack && yarn run clean-build-steps",
-    "serve": "yarn run build && http-server dist"
+    "build-partial": "yarn run babel && yarn run webpack && yarn run clean-build-steps",
+    "serve": "yarn run build && ./node_modules/http-server/bin/http-server dist"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/coreyshuman/nikola-gauge.git"
   },
-  "author": "Corey Shuman <corey@coreyshuman.com>",
+  "author": "Corey Shuman <ctshumancode@coreyshuman.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/coreyshuman/nikola-gauge/issues"
